--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Upload to TestFlight
       uses: Apple-Actions/upload-testflight-build@master
       with:
-        app-path: .build/Artifacts/OPass.ipa
+        app-path: .build/Artifacts/OPass.app/OPass.ipa
         issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
         api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
         api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
