makes PR secrets available

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,6 @@
 name: "Release"
 on: # rebuild any PRs and main branch changes
-  pull_request:
+  pull_request_target:
   push:
     branches:
       - master
