--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,12 +53,12 @@ jobs:
         issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
         api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
         api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
-    - name: Archive IPA Artifacts
+    - name: Archive App IPA Artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: OPass IPA
+        name: OPass App (IPA)
         path: |
-          .build/Artifacts/*.ipa
+          .build/Artifacts/*.app
     - name: Archive Artifacts without IPA
       uses: actions/upload-artifact@v2
       with:
