--- a/Supporting Files/OPass/config.plist
+++ b/Supporting Files/OPass/config.plist
@@ -8,6 +8,12 @@
 		<string>portal.opass.app</string>
 		<key>AcknowledgementsRepo</key>
 		<string>CCIP-App/CCIP-iOS</string>
+		<key>PrivacyURL</key>
+		<string>https://opass.app/privacy-policy.html</string>
+		<key>HideContributor</key>
+		<false/>
+		<key>HideLibraries</key>
+		<false/>
 		<key>ogToken</key>
 		<string>b6213f49-e356-4b48-aa9d-7cf10ce1904d</string>
 		<key>scandit</key>
