--- a/OPass/Info.plist
+++ b/OPass/Info.plist
@@ -2,11 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-<<<<<<< Updated upstream
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
-=======
+	</array>
 	<key>FirebaseDynamicLinksCustomDomains</key>
 	<array>
 		<string>https://dl.opass.app</string>
@@ -25,7 +24,6 @@
 			</array>
 		</dict>
 		<dict/>
->>>>>>> Stashed changes
 	</array>
 </dict>
 </plist>
