--- a/OneSignalNotificationServiceExtension/OneSignalNotificationServiceExtension.entitlements
+++ b/OneSignalNotificationServiceExtension/OneSignalNotificationServiceExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.app.opass.ccip.onesignal</string>
+		<string>group.app.opass.ccip</string>
 	</array>
 </dict>
 </plist>
