--- a/OPass/OPass.entitlements
+++ b/OPass/OPass.entitlements
@@ -4,6 +4,12 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:opass.app</string>
+		<string>applinks:dl.opass.app</string>
+		<string>applinks:opass.page.link</string>
+	</array>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array/>
 	<key>com.apple.developer.networking.HotspotConfiguration</key>
