--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ next ]
+    branches: [ master ]
   pull_request:
-    branches: [ next ]
+    branches: [ master ]
 
 jobs:
   build:
