--- a/OPass/Preview Content/eventSettingsSample.json
+++ b/OPass/Preview Content/eventSettingsSample.json
@@ -1,119 +1,120 @@
 {
-    "event_id": "SITCON_2020",
-    "display_name": {
-        "en": "SITCON 2020",
-        "zh": "SITCON 2020"
+  "event_id": "SITCON_2020",
+  "display_name": {
+    "en": "SITCON 2020",
+    "zh": "SITCON 2020"
+  },
+  "logo_url": "https://sitcon.org/branding/assets/logos/withname-white.png",
+  "event_website": "https://sitcon.org/2022/",
+  "event_date": {
+    "start": "2020-08-08T00:00:00+08:00",
+    "end": "2020-08-08T00:00:00+08:00"
+  },
+  "publish": {
+    "start": "2020-01-24T08:00",
+    "end": "2020-12-28T08:00"
+  },
+  "features": [
+    {
+      "feature": "fastpass",
+      "display_text": {
+        "en": "Fast Pass",
+        "zh": "快速通關"
+      },
+      "url": "https://sitcon.opass.app"
     },
-    "logo_url": "https://sitcon.org/branding/withname-white.png",
-    "event_date": {
-        "start": "2020-08-08T00:00:00+08:00",
-        "end": "2020-08-08T00:00:00+08:00"
+    {
+      "feature": "schedule",
+      "display_text": {
+        "en": "Schedule",
+        "zh": "議程"
+      },
+      "url": "https://sitcon.org/2020/json/session.json"
     },
-    "publish": {
-        "start": "2020-01-24T08:00",
-        "end": "2020-12-28T08:00"
+    {
+      "feature": "announcement",
+      "display_text": {
+        "en": "Announcement",
+        "zh": "大會公告"
+      },
+      "url": "https://sitcon.opass.app"
     },
-    "features": [
+    {
+      "feature": "puzzle",
+      "display_text": {
+        "en": "#define matrix",
+        "zh": "#define matrix"
+      },
+      "url": "https://play.sitcon.party/?mode=app&token={public_token}&"
+    },
+    {
+      "feature": "ticket",
+      "display_text": {
+        "en": "Ticket",
+        "zh": "我的票券"
+      }
+    },
+    {
+      "feature": "webview",
+      "icon": "https://sitcon.org/2020/img/baseline_how_to_reg_black_48.png",
+      "display_text": {
+        "en": "Health Declaration",
+        "zh": "健康聲明書"
+      },
+      "url": "https://cdc.sitcon.org/#/?rtoken={token}"
+    },
+    {
+      "feature": "telegram",
+      "display_text": {
+        "en": "Telegram",
+        "zh": "Telegram"
+      },
+      "url": "https://t.me/SITCONgeneral"
+    },
+    {
+      "feature": "im",
+      "display_text": {
+        "en": "IRC Log",
+        "zh": "IRC Log"
+      },
+      "url": "https://ysitd.licson.net/channel/sitcon/today"
+    },
+    {
+      "feature": "wifi",
+      "display_text": {
+        "en": "WiFi",
+        "zh": "會場 WiFi"
+      },
+      "wifi": [
         {
-            "feature": "fastpass",
-            "display_text": {
-                "en": "Fast Pass",
-                "zh": "快速通關"
-            },
-            "url": "https://sitcon.opass.app"
-        },
-        {
-            "feature": "schedule",
-            "display_text": {
-                "en": "Schedule",
-                "zh": "議程"
-            },
-            "url": "https://sitcon.org/2020/json/session.json"
-        },
-        {
-            "feature": "announcement",
-            "display_text": {
-                "en": "Announcement",
-                "zh": "大會公告"
-            },
-            "url": "https://sitcon.opass.app"
-        },
-        {
-            "feature": "puzzle",
-            "display_text": {
-                "en": "#define matrix",
-                "zh": "#define matrix"
-            },
-            "url": "https://play.sitcon.party/?mode=app&token={public_token}&"
-        },
-        {
-            "feature": "ticket",
-            "display_text": {
-                "en": "Ticket",
-                "zh": "我的票券"
-            }
-        },
-        {
-            "feature": "webview",
-            "icon": "https://sitcon.org/2020/img/baseline_how_to_reg_black_48.png",
-            "display_text": {
-                "en": "Health Declaration",
-                "zh": "健康聲明書"
-            },
-            "url": "https://cdc.sitcon.org/#/?rtoken={token}"
-        },
-        {
-            "feature": "telegram",
-            "display_text": {
-                "en": "Telegram",
-                "zh": "Telegram"
-            },
-            "url": "https://t.me/SITCONgeneral"
-        },
-        {
-            "feature": "im",
-            "display_text": {
-                "en": "IRC Log",
-                "zh": "IRC Log"
-            },
-            "url": "https://ysitd.licson.net/channel/sitcon/today"
-        },
-        {
-            "feature": "wifi",
-            "display_text": {
-                "en": "WiFi",
-                "zh": "會場 WiFi"
-            },
-            "wifi": [
-                {
-                    "SSID": "SITCON 2020",
-                    "password": "20200808"
-                }
-            ]
-        },
-        {
-            "feature": "venue",
-            "display_text": {
-                "en": "Venue",
-                "zh": "會場地圖"
-            },
-            "url": "https://sitcon.org/2020/venue?mode=app"
-        },
-        {
-            "feature": "sponsors",
-            "display_text": {
-                "en": "Sponsors",
-                "zh": "贊助"
-            },
-            "url": "https://sitcon.org/2020/team/sponsor?mode=app"
-        },
-        {
-            "feature": "staffs",
-            "display_text": {
-                "en": "Staffs",
-                "zh": "工作人員"
-            },
-            "url": "https://sitcon.org/2020/team?mode=app"
+          "SSID": "SITCON 2020",
+          "password": "20200808"
         }
-    ]
+      ]
+    },
+    {
+      "feature": "venue",
+      "display_text": {
+        "en": "Venue",
+        "zh": "會場地圖"
+      },
+      "url": "https://sitcon.org/2020/venue?mode=app"
+    },
+    {
+      "feature": "sponsors",
+      "display_text": {
+        "en": "Sponsors",
+        "zh": "贊助"
+      },
+      "url": "https://sitcon.org/2020/team/sponsor?mode=app"
+    },
+    {
+      "feature": "staffs",
+      "display_text": {
+        "en": "Staffs",
+        "zh": "工作人員"
+      },
+      "url": "https://sitcon.org/2020/team?mode=app"
+    }
+  ]
 }
