A basic implementation of schedule search
Will be more capabilities in the future like tokens, search any string in session, etc.
Also add AppCheck

--- a/Supporting Files/OPass.entitlements
+++ b/Supporting Files/OPass.entitlements
@@ -10,6 +10,8 @@
 		<string>applinks:dl.opass.app</string>
 		<string>applinks:opass.page.link</string>
 	</array>
+	<key>com.apple.developer.devicecheck.appattest-environment</key>
+	<string>production</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array/>
 	<key>com.apple.developer.networking.HotspotConfiguration</key>
