--- a/Supporting Files/Info.plist
+++ b/Supporting Files/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIdentifier</key>
+	<string>app.opass.ccip</string>
+	<key>CFBundleShortVersionString</key>
+	<string>4.2.8</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
