--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -28,11 +28,13 @@ jobs:
 
     - name: Update version in Xcode project
       run: |
-        /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString ${{ github.event.inputs.version }}" "/Supporting Files/Info.plist"
+        /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString ${{ github.event.inputs.version }}" "Supporting Files/Info.plist"
+        /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString ${{ github.event.inputs.version }}" "OneSignalNotificationServiceExtension/Info.plist"
 
     - name: Commit version change
       run: |
-        git add "/Supporting Files/Info.plist"
+        git add "Supporting Files/Info.plist"
+        git add "OneSignalNotificationServiceExtension/Info.plist"
         git commit -m "Bump version to ${{ github.event.inputs.version }}"
 
     - name: Push changes
