--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,15 +1,12 @@
 name: Upload
-
 permissions:
   contents: write
-
 on:
   workflow_dispatch:
     inputs:
       version:
         description: 'Version Number'
         required: true
-
 jobs:
   merge_and_update:
     runs-on: macos-latest
@@ -18,27 +15,25 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-
     - name: Configure Git
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
-
-    - name: Merge develop into master
+    - name: Force merge develop into master
       run: |
         git checkout master
-        git merge origin/develop
-
-    - name: Update version in Xcode project
-      run: |
-        /usr/libexec/PlistBuddy -c "Set CFBundleShortVersionString ${{ github.event.inputs.version }}" "Supporting Files/Info.plist"
-        /usr/libexec/PlistBuddy -c "Set CFBundleShortVersionString ${{ github.event.inputs.version }}" "OneSignalNotificationServiceExtension/Info.plist"
-
+        git merge -X theirs --no-edit origin/develop || (
+          git merge --abort
+          git reset --hard origin/develop
+          echo "Merge failed. Master reset to develop."
+        )
+    #- name: Update version in Xcode project
+    #  run: |
+    #    /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString ${{ github.event.inputs.version }}" "Supporting Files/Info.plist"
+    #    /usr/libexec/PlistBuddy -c "Set :CFBundleIdentifier org.YuKaBu.app" "Supporting Files/Info.plist"
     - name: Commit version change
       run: |
-        git add "Supporting Files/Info.plist"
-        git add "OneSignalNotificationServiceExtension/Info.plist"
-        git commit -m "Upload with Version ${{ github.event.inputs.version }}"
-
-    - name: Push changes
-      run: git push origin master
+        git add .
+        git commit -m "Upload with Version ${{ github.event.inputs.version }}" --allow-empty
+    - name: Force push changes
+      run: git push --force origin master
